@@ -38,15 +38,41 @@ public class JavaCompiler {
      */
     public String javaCompiler(final JavaParameter newJavaParameter) throws CompilerException {
         LOGGER.info("start");
+        javaParameter = newJavaParameter;
+        LOGGER.info("Execute Try");
+        String commandCompile = "";
+        String commandExecute = "";
+        String osName = System.getProperty("os.name").toLowerCase();
+        if (osName.contains("windows")) {
+            commandCompile = javaParameter.getJavaVersion().getCompiler() + " "
+                    + javaParameter.getFilePath();
+            commandExecute = javaParameter.getJavaVersion().getExecutor() + " "
+                    + javaParameter.getFilePath();
+        } else {
+            commandCompile = "sudo " + javaParameter.getJavaVersion().getCompiler() + " "
+                    + javaParameter.getFilePath();
+            commandExecute ="sudo " + javaParameter.getJavaVersion().getExecutor() + " "
+                    + javaParameter.getFilePath();
+        }
+        System.out.println(commandCompile);
+        System.out.println(commandExecute);
         try {
-            javaParameter = newJavaParameter;
-            LOGGER.info("Execute Try");
-            String command = javaParameter.getJavaVersion().getCompiler() + " " + "\""
-                    + javaParameter.getFilePath() + "\" " + "&& "
-                    + javaParameter.getJavaVersion().getExecutor() + " "
-                    + "\"" + javaParameter.getFilePath() + "\"";
-            ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/c", command);
-            Process process = processBuilder.start();
+            Process process = Runtime.getRuntime().exec(commandCompile);;
+            bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        } catch (IOException exception) {
+            LOGGER.error("Execute Exception" + exception.getLocalizedMessage());
+            return String.valueOf(new CompilerException(exception));
+        } finally {
+            try {
+                LOGGER.info("Close bufferedReader Stream");
+                bufferedReader.close();
+            } catch (IOException exception) {
+                LOGGER.error("Close Stream error" + exception.getLocalizedMessage());
+                throw new CompilerException(exception);
+            }
+        }
+        try {
+            Process process = Runtime.getRuntime().exec(commandExecute);;
             bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String resultOfExecution = null;
             String result = "";
@@ -88,16 +114,20 @@ public class JavaCompiler {
      */
     public String javaProjectCompiler(final JavaParameter newJavaParameter) {
         LOGGER.info("start");
-        final String JAVA_COMPILER = System.getProperty("user.dir") + System.getProperty("file.separator")
-                + newJavaParameter.getJavaVersion().getCompiler();
-        final String JAVA_EXE = System.getProperty("user.dir") + System.getProperty("file.separator") + newJavaParameter
-                .getJavaVersion().getExecutor();
+        final String JAVA_COMPILER = newJavaParameter.getJavaVersion().getCompiler();
+        final String JAVA_EXE = newJavaParameter.getJavaVersion().getExecutor();
         try {
             javaParameter = newJavaParameter;
             LOGGER.info("Execute Try");
-            String comnand = "cd " + javaParameter.getFilePath() + " && " + JAVA_COMPILER
+            String command = "cd " + javaParameter.getFilePath() + " && " + JAVA_COMPILER
                     + " Main.java && " + JAVA_EXE + " Main";
-            ProcessBuilder processBuilder = new ProcessBuilder("cmd.exe", "/c", comnand);
+            ProcessBuilder processBuilder = null;
+            String osName = System.getProperty("os.name").toLowerCase();
+            if (osName.contains("windows")) {
+                processBuilder = new ProcessBuilder("cmd.exe", "/c", command);
+            } else {
+                processBuilder = new ProcessBuilder("bash", "-c", command);
+            }
             Process process = processBuilder.start();
             bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
             String resultOfExecution = null;
@@ -120,4 +150,3 @@ public class JavaCompiler {
         }
     }
 }
-
